ranking Test matchCount add